# rust-web-starter

./: .env  .gitignore  Cargo.toml  README  application.yaml  build.sh
src/: app.rs  common.rs  database.rs  error.rs  json.rs  latency.rs  main.rs  path.rs  query.rs  server.rs  valid.rs
src/api/: auth.rs  mod.rs  user.rs
src/app/: auth.rs  enumeration.rs  error.rs  id.rs  json.rs  logger.rs  middleware.rs  mod.rs  path.rs  query.rs  response.rs  serde.rs  server.rs  utils.rs  valid.rs  validation.rs
src/config/: database.rs  mod.rs  server.rs
src/entity/: mod.rs  prelude.rs  sys_user.rs
src/web/: mod.rs
web/src/components/form/field-components/: date-picker.tsx  radio-select.tsx  switch.tsx
web/src/pages/_layout/: route.tsx
web/src/styles/: index.css
